feat: configure Spring Security, add environment properties, and document Docker build process